# DFA

./: CMakeLists.txt  main.cpp
headers/: DFA.h  LNFA.h  NFA.h  regGrammar.h
headers/exceptions/: faExceptions.h
sources/: DFA.cpp  LNFA.cpp  NFA.cpp  regGrammar.cpp
sources/exceptions/: faExceptions.cpp
